[package]
name = "test_iroh"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.96"
iroh = "0.32.1"
iroh-docs = { version = "0.32", features = ["rpc"] }
iroh-blobs = { version = "0.32", features = ["rpc"] }
iroh-gossip = { version = "0.32", features = ["rpc"] }
iroh-node-util = "0.32"
quic-rpc = "0.18.1"
serde = { version = "1.0.218", features = ["derive"] }
tokio = "1.43.0"
bytes = "1"
futures-lite = "2.3.0"
serde_json = "1.0"
clap = { version = "4.5.30", features = ["derive"] }
rustyline = "15.0.0"
shlex = "1.3.0"
